data/derived/comb/progs/unify/prog6089.ml.out
Characters 47-82:
  if n > 0 then n mod 10 + additivePersistence n/10;;
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         unit
